if(WIN32)
  set_property(GLOBAL PROPERTY USE_FOLDERS On)
  set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_Predefined")
endif(WIN32)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_CXX_FLAGS"${CMAKE_CXX_FLAGS} -std=c++0x")
project(XScript) 
add_subdirectory(src/common) 
add_subdirectory(src/core) 
add_subdirectory(src/luabinder) 
add_subdirectory(src/v8binder) 
add_subdirectory(sampler) 